--- a/gndjf.xcodeproj/xcshareddata/xcschemes/gndjf.xcscheme
+++ b/gndjf.xcodeproj/xcshareddata/xcschemes/gndjf.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B983A4592846B1E80016EE52"
+            BuildableName = "gndjf.app"
+            BlueprintName = "gndjf"
+            ReferencedContainer = "container:gndjf.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
